--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "pages/myAccount/setAccount/verifyPhone",
     "pages/myAccount/aboutUs",
     "pages/myFocus/topic",
-    "pages/myFans/index" 
+    "pages/myFans/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -42,5 +42,6 @@
         "text": "我的"
       }
     ]
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
