--- a/app.json
+++ b/app.json
@@ -17,7 +17,10 @@
     "pages/myAccount/aboutUs",
     "pages/myFocus/topic",
     "pages/myFans/index",
-    "pages/search/index"
+    "pages/notice/index",
+    "pages/search/index",
+    "pages/collection/index",
+    "pages/newFans/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
