--- a/project.config.json
+++ b/project.config.json
@@ -85,8 +85,9 @@
 				},
 				{
 					"id": -1,
-					"name": "pages/notice/index",
-					"pathName": "pages/notice/index",
+					"name": "pages/release/index",
+					"pathName": "pages/release/index",
+					"query": "",
 					"scene": null
 				}
 			]
