参与话题，选择位置页面

--- a/app.json
+++ b/app.json
@@ -21,7 +21,10 @@
     "pages/search/index",
     "pages/collection/index",
     "pages/newFans/index",
-    "pages/release/index"
+    "pages/release/index",
+    "pages/choiceTopic/index",
+    "pages/choiceLocation/index"
+
   ],
   "window": {
     "backgroundTextStyle": "light",
