--- a/project.config.json
+++ b/project.config.json
@@ -39,7 +39,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 6,
+			"current": 7,
 			"list": [
 				{
 					"id": -1,
@@ -78,15 +78,22 @@
 				},
 				{
 					"id": -1,
-					"name": "pages/search/index",
-					"pathName": "pages/search/index",
+					"name": "pages/release/index",
+					"pathName": "pages/release/index",
 					"query": "",
 					"scene": null
 				},
 				{
 					"id": -1,
-					"name": "pages/release/index",
-					"pathName": "pages/release/index",
+					"name": "pages/choiceTopic/index",
+					"pathName": "pages/choiceTopic/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/choiceLocation/index",
+					"pathName": "pages/choiceLocation/index",
 					"query": "",
 					"scene": null
 				}
